--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="canvas">	
+<div class="container"> <!--container start-->
+	<section id="nav">
+		<ul>
+			<li id="current"><a href="index.html">  Home</a> </li>
+			<li> <a href="ah.html"> App Highlights</a></li>
+			<li> <a href="msft.html"> Microsoft</a></li>
+			<li> <a href="exports.html"> Data Exports</a></li>
 
-<%= yield %>
 
+		</ul>
+	</section>
+
+	<section id="content">	 <!--content begins-->
+		<p>
+		Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.
+		</p>
+		<%= yield %>
+	</section>
+</div>  <!--container end-->
+</div>
 </body>
 </html>
+
+
+
