--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,11 +23,13 @@ HTML Elements
 
 
 body {
-	background: #6B6B6B;
+	background: #BDBFB5;
 	font: 12px/170% 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	color: #6B6B6B; 
 	text-align: center;	
+	
 }
+
 
 
 /* Paragraph */
@@ -83,7 +85,11 @@ p { padding: 12px 10px 0px 40px;	}
 	color: #4B3D2C;
 }
 
-
+.canvas{
+	background: #D1D2CD;
+	width: 100%;
+	height: 100%;
+}
 
 
 /* Content Container */
