--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,7 +85,7 @@ p { padding: 12px 10px 0px 40px;	}
 	color: #4B3D2C;
 }
 
-.canvas{
+.wrapper{
 	background: #D1D2CD;
 	width: 100%;
 	height: 100%;
@@ -109,7 +109,12 @@ p { padding: 12px 10px 0px 40px;	}
 }
 
 
-#content {
+.content h1 {
+	margin: 30px auto auto 40px ;
+}
+.content {
+	//background :green;
+  margin: 0px 30px 30px auto;	
   opacity : 1;
   transition-property : opacity; 
   transition-duration : 3.0s; 
@@ -117,14 +122,16 @@ p { padding: 12px 10px 0px 40px;	}
 /* Sidebar*/
 
 
-/*
+
 #sidebar {
+//	background:  red;
 	float: right;
 	width: 185px;
+	height: 100px;
 	padding: 0px; 
-	margin: 0 45px 0 0;
 	display: inline;	
 }
+/*
 #sidebar h3 {
 	color: #51432F; 
 	font: bold 1.2em 'Trebuchet MS', 'Helvetica Neue', Arial, Sans-serif;
@@ -160,5 +167,6 @@ list-style: none;
 #sidebar ul li#current a {	
 	color: #4B3D2C;
 }
+
 
 */
