--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-	
+<h1>Welcome to the Pulse</h1>
+<p>
+	Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.
+</p>
