--- a/app/views/ah/index.html.erb
+++ b/app/views/ah/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Ah#index</h1>
-<p>Find me in app/views/ah/index.html.erb</p>
+<h1>App Highlights</h1>
+<p>This is the view for app highlights data.
+	This is the view for app highlights data
+	This is the view for app highlights data
+	This is the view for app highlights data
+	This is the view for app highlights data
+	This is the view for app highlights data</p>
