--- a/app/views/msft/index.html.erb
+++ b/app/views/msft/index.html.erb
@@ -1,10 +1,32 @@
-<h1>Microsoft</h1>
-<p>All  Microsft related analytics health can be found here.</p>
-<section id="sidebar">
-	</section>
-		<section id="sidebar"><!--sidebar begins-->
-			<h3>More Msft...</h3>	
-		</section><!--sidebar ends-->
-	<section id="content">	 <!--content begins-->
+
+<section id="info-display">
+<h1>Microsoft</h1>	
+	<comment>
+		<p>All  Microsft related analytics health can be found here.All  Microsft related analytics health can be found here.
+		All  Microsft related analytics health can be found here.All  Microsft related analytics health can be found here.
+		All  Microsft related analytics health can be found here.All  Microsft related analytics health can be found here.
+		</p>	
+	</comment>
+
+	<figure>
+		
+		
+		
+	</figure>
+	<figcaption>
+		
+	</figcaption>	
+	
+	
 	
 </section>
+<section id="sidebar"><!--sidebar begins-->
+	<h3>Dimension</h3>	
+	<ul>
+		<li><a href="/msft">Database</a></li>
+		<li><a href="/msft">Aggregates</a></li>
+		
+	</ul>
+</section><!--sidebar ends-->
+
+
