--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,13 +151,14 @@ p { padding: 12px 10px 0px 40px;	}
 
 #sidebar ul li a {
 	color: black;
-	font: bold 15px/45px 'Trebuchet MS', 'Helvetica Neue', Arial, sans-serif;
+	font: bold 15px 'Trebuchet MS', 'Helvetica Neue', Arial, sans-serif;
+	margin: 0; padding: 0px;		
     text-decoration: none;
-list-style: none;
-   opacity: 0.5;
-   transition: opacity .25s ease-in-out;
-   -moz-transition: opacity .25s ease-in-out;
-   -webkit-transition: opacity .25s ease-in-out;
+	list-style: none;
+   	opacity: 0.5;
+   	transition: opacity .25s ease-in-out;
+   	-moz-transition: opacity .25s ease-in-out;
+   	-webkit-transition: opacity .25s ease-in-out;
 }
 #sidebar ul li a:hover, 
 #sidebar ul li a:active {
