--- a/app/views/msft/index.html.erb
+++ b/app/views/msft/index.html.erb
@@ -24,6 +24,12 @@
 	<h3>Dimension</h3>	
 	<ul>
 		<li><a href="/msft">Database</a></li>
+			<ul>
+				<li><a href="/msft/offers">Offers</a></li>
+				<li><a href="/msft/developers">Developers</a></li>
+				<li><a href="/msft/products">Products</a></li>
+				<li><a href="/msft/txns">Transactions</a></li>
+			</ul>
 		<li><a href="/msft">Aggregates</a></li>
 		
 	</ul>
