images and clear both

--- a/app/views/msft/index.html.erb
+++ b/app/views/msft/index.html.erb
@@ -5,13 +5,14 @@
 		<p>All  Microsft related analytics health can be found here.All  Microsft related analytics health can be found here.
 		All  Microsft related analytics health can be found here.All  Microsft related analytics health can be found here.
 		All  Microsft related analytics health can be found here.All  Microsft related analytics health can be found here.
+	
 		</p>	
 	</comment>
 
 	<figure>
+			<%=image_tag("msft/hands.jpg",:class=>"image_box",:size => "600x500") %>
 		
-		
-		
+
 	</figure>
 	<figcaption>
 		
