--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ body {
 
 
 /* Paragraph */
-p { padding: 12px 10px 0px 40px;	}
+p { padding: 12px 10px 0px 40px;	 }
 
 
 /*-----------------------------------
@@ -85,7 +85,7 @@ p { padding: 12px 10px 0px 40px;	}
 	color: #4B3D2C;
 }
 
-.wrapper{
+.wrapper1{
 	background: #D1D2CD;
 	width: 100%;
 	height: 100%;
@@ -96,8 +96,6 @@ p { padding: 12px 10px 0px 40px;	}
 .container {
 	position: relative;
 	width: 952px;
-	height: 500px;
-	
 	background: #FFF url(wrap.gif )  repeat-y center top;
 	margin: 40px auto 30px auto;
 	text-align: left;	
@@ -126,6 +124,7 @@ p { padding: 12px 10px 0px 40px;	}
 	width: 70%;
 	height: 100%;
 }
+
 
 #sidebar {
 	float: right;
@@ -200,5 +199,14 @@ p { padding: 12px 10px 0px 40px;	}
 }
 
 
+.clear { clear: both; }
 
 
+
+.image_box {
+  margin: 130px;
+  -moz-box-shadow: 5px 5px 7px #888;
+  -moz-border-radius-bottomright: 15px;
+  -webkit-box-shadow: 5px 5px 7px #888;
+  -webkit-border-bottom-right-radius: 15px;
+}
