sub template for msft

--- a/app/views/ms_developers/index.html.erb
+++ b/app/views/ms_developers/index.html.erb
@@ -1,4 +1,8 @@
+
+<section id="info-display">
 <h1>Listing ms_developers</h1>
+	<comment>
+
 
 <table>
   <tr>
@@ -18,4 +22,16 @@
   </tr>
 <% end %>
 </table>
+
+	</comment>
+
+	<figure>
+
+	</figure>
+	<figcaption>
+
+	</figcaption>
+</section>
+
+<%= render :template => 'layouts/msft_sidebar' %>
 
