--- a/app/views/ms_products/index.html.erb
+++ b/app/views/ms_products/index.html.erb
@@ -1,3 +1,5 @@
+
+<section id="info-display">
 <h1>Listing ms_products</h1>
 
 <table>
@@ -17,3 +19,5 @@
 <% end %>
 </table>
 
+</section>
+<%= render :template => 'layouts/msft_sidebar' %>
