--- a/app/views/ms_txns/index.html.erb
+++ b/app/views/ms_txns/index.html.erb
@@ -1,3 +1,5 @@
+
+<section id="info-display">
 <h1>Listing ms_txns</h1>
 
 <table>
@@ -16,3 +18,5 @@
   </tr>
 <% end %>
 </table>
+</section>
+<%= render :template => 'layouts/msft_sidebar' %>
