--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,5 @@
 <p>
 	Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.Welcome to the pulse server where we can monitor the health of data intake systems from DataOS.
 </p>
+
+		<%= image_tag("orange.jpg",:id=>"slash_img",:size => "600x500") %>
