--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,7 +103,8 @@ p { padding: 12px 10px 0px 40px;	 }
 	border-top-left-radius: 35px;
 	-moz-border-radius-topright: 35px;
 	border-top-right-radius: 35px;
-
+     min-height:900px;
+     #height:auto !important;
 }
 
 
